--- a/wwwroot/css/Hakkimizda.css
+++ b/wwwroot/css/Hakkimizda.css
@@ -1,7 +1,7 @@
 ﻿.about-header {
     position: relative;
     height: 400px;
-    background-image: url('/images/resim2.jpg'); /* Arka plan resmi */
+    background-image: url('/images/resim2.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -13,7 +13,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.6); /* Arka plan koyuluk efekti */
+        background-color: rgba(0, 0, 0, 0.6);
         display: flex;
         align-items: center;
         justify-content: center;
