--- a/wwwroot/css/Konaklama.css
+++ b/wwwroot/css/Konaklama.css
@@ -91,8 +91,8 @@
 .btn-reserve {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #632801 !important; /* Butonun temel rengi */
-    color: white !important; /* Yazı rengi */
+    background-color: #632801 !important;
+    color: white !important;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
@@ -103,5 +103,5 @@
 }
 
     .btn-reserve:hover {
-        background-color: #664733 !important; /* Hover sırasında butonun rengi */
+        background-color: #664733 !important; 
     }
