--- a/wwwroot/css/Iletisim.css
+++ b/wwwroot/css/Iletisim.css
@@ -1,4 +1,4 @@
-﻿/* Sayfa Başlığı */
+﻿
 .contact-header {
     text-align: center;
     padding: 20px;
@@ -16,7 +16,7 @@
         margin: 0;
     }
 
-/* İletişim Konteyneri */
+
 .contact-container {
     display: flex;
     flex-wrap: wrap;
@@ -92,7 +92,7 @@
             background-color: #5a2600;
         }
 
-/* Harita */
+
 .contact-map {
     width: 100%;
     margin: 30px auto;
