--- a/wwwroot/css/Restorant.css
+++ b/wwwroot/css/Restorant.css
@@ -1,14 +1,14 @@
 ﻿.restorant-content {
     display: flex;
-    justify-content: space-between; /* Sağ ve sol tarafı ayır */
+    justify-content: space-between; 
     align-items: center;
     padding: 40px;
-    gap: 20px; /* Sol ve sağ taraf arasında boşluk */
+    gap: 20px; 
 }
 
-/* Sol Taraf: Restoran Bilgisi */
+
 .restorant-info {
-    flex: 1; /* Sol tarafın genişliği */
+    flex: 1;
     padding: 20px;
 }
 
@@ -42,11 +42,11 @@
 .about-header {
     position: relative;
     height: 400px;
-    background-image: url('/images/restoran4.jpg'); /* Arka plan resmi */
+    background-image: url('/images/restoran4.jpg'); 
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    filter: brightness(0.7); /* Hafif koyuluk efekti */
+    filter: brightness(0.7); 
     display: flex;
     align-items: center;
     justify-content: center;
@@ -59,9 +59,9 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.5); /* Daha ince bir koyuluk efekti */
-        display: flex; /* Flexbox kullanımı */
-        align-items: center; /* Dikey ortalama */
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex; 
+        align-items: center; 
         justify-content: center;
     }
 
@@ -75,18 +75,18 @@
         margin: 0;
     }
 
-/* Slider */
+
 .restorant-slider {
-    flex: 1; /* Sağ tarafın genişliği */
-    width: 50%; /* Slider'ın genişliği */
-    height: 250px; /* Slider'ın boyutu */
+    flex: 1; 
+    width: 50%; 
+    height: 250px; 
     display: flex;
     position: relative;
     align-items: center;
-    margin: 30px auto; /* Ortalanması için */
+    margin: 30px auto;
     overflow: hidden;
-    border-radius: 10px; /* Köşeleri yuvarlama */
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); /* Hafif gölge efekti */
+    border-radius: 10px; 
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 }
 
 .slider-images {
@@ -104,10 +104,10 @@
 
         .slider-images img.active {
             display: block;
-            animation: fadeIn 0.8s ease-in-out; /* Geçiş animasyonu */
+            animation: fadeIn 0.8s ease-in-out;
         }
 
-/* Geçiş Animasyonu */
+
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -118,7 +118,7 @@
     }
 }
 
-/* Slider Düğmeleri */
+
 .slider-btn {
     position: absolute;
     top: 50%;
