--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,9 @@
     <header class="navbar">
         <div class="container">
             <div class="logo">
-                <img src="/images/logo.png" alt="Uludağ Bungalov">
+                <a href="/Admin/Login">
+                    <img src="/images/logo.png" alt="Uludağ Bungalov">
+                </a>
                 <span>Uludağ Bungalov</span>
             </div>
             <nav class="menu">
